--- a/index.html
+++ b/index.html
@@ -1,124 +1,122 @@
-
+ 
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Activación Billete CTF8</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CTF8 - Activación de Billete</title>
 
-<style>
-body {
-  font-family: Arial;
-  background: #111;
-  color: white;
-  text-align: center;
-}
+  <style>
+    body {
+      font-family: Arial;
 
-.contenedor {
-  background: #222;
-  padding: 20px;
-  margin: 20px auto;
-  max-width: 400px;
-  border-radius: 10px;
-}
+      /* IMAGEN DE PIRÁMIDES COMO FONDO */
+      background-image: url('img/file_000000008a8071f5b63d2554060b50ce.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
 
-input {
-  width: 90%;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 5px;
-  border: none;
-}
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
 
-button {
-  padding: 10px 20px;
-  margin: 10px;
-  border-radius: 5px;
-  border: none;
-  background: #28a745;
-  color: white;
-  cursor: pointer;
-}
+    .box {
+      background: rgba(30, 41, 59, 0.85);
+      padding: 20px;
+      border-radius: 10px;
+      margin: auto;
+      max-width: 450px;
+    }
 
-.descargar {
-  background: #f6851b;
-}
-</style>
+    input, button {
+      padding: 10px;
+      margin: 5px;
+      width: 90%;
+      border-radius: 5px;
+      border: none;
+    }
+
+    button {
+      background: #38bdf8;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #0ea5e9;
+    }
+
+    .descargar {
+      background: orange;
+      color: black;
+    }
+
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+
+    a {
+      color: #38bdf8;
+      display: block;
+      margin-top: 10px;
+    }
+  </style>
 
 </head>
+
 <body>
 
-<h2>Activar Billete CTF8</h2>
+  <div class="box">
 
-<div class="contenedor">
+    <h2>🎫 Activar Billete CTF8</h2>
 
-<form id="formulario">
+    <!-- IMAGEN DE LA SILLA (NO SE BORRA) -->
+    <img src="img/silla.jpg" alt="Imagen del billete CTF8">
 
-  <label>Código del Billete:</label><br>
-  <input type="text" id="codigo" placeholder="Ej: CTF8-12345" required>
+    <p>Ingresa tu código del billete y tu dirección de wallet:</p>
 
-  <br>
+    <form id="formulario">
 
-  <label>Tu Dirección de Wallet (Metamask):</label><br>
-  <input type="text" id="wallet" placeholder="0x..." required>
+      <label>Código del Billete:</label><br>
+      <input type="text" id="codigo" placeholder="Ej: CTF8-12345" required>
 
-  <br>
+      <br>
 
-  <button type="submit">Activar Billete</button>
+      <label>Tu Wallet (Metamask / BSC):</label><br>
+      <input type="text" id="wallet" placeholder="0x..." required>
 
-</form>
+      <br>
 
-<br>
+      <button type="submit">✅ Enviar Activación</button>
 
-<a href="https://metamask.io/download/" target="_blank">
-  <button class="descargar">Descargar Metamask</button>
-</a>
+    </form>
 
-<p id="mensaje"></p>
+    <br>
 
-</div>
+    <a href="https://metamask.io/download/" target="_blank">
+      <button class="descargar">Descargar Metamask</button>
+    </a>
 
-<script>
+    <p id="mensaje"></p>
 
-document.getElementById("formulario").addEventListener("submit", function(e) {
+    <a href="panel.html">Ir al Panel del Usuario</a>
+    <a href="tutorial.html">📘 Ver Tutorial</a>
 
-e.preventDefault();
+  </div>
 
-let codigo = document.getElementById("codigo").value;
-let wallet = document.getElementById("wallet").value;
+  <script>
+    const form = document.getElementById("formulario");
 
-if(codigo == "" || wallet == "") {
-  alert("Debes completar todos los campos");
-  return;
-}
+    form.addEventListener("submit", async function(e) {
+      e.preventDefault();
 
-fetch("https://formspree.io/f/xzzvzwwq", {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    codigo_billete: codigo,
-    wallet_usuario: wallet
-  })
-})
-.then(response => response.json())
-.then(data => {
+      const codigo = document.getElementById("codigo").value;
+      const wallet = document.getElementById("wallet").value;
 
-  document.getElementById("mensaje").innerHTML =
-  "Solicitud enviada correctamente. Revisión en proceso.";
-
-  document.getElementById("codigo").value = "";
-  document.getElementById("wallet").value = "";
-
-})
-.catch(error => {
-  document.getElementById("mensaje").innerHTML =
-  "Error al enviar. Intenta nuevamente.";
-});
-
-});
-
-</script>
-
-</body>
-</html>
+      if (!codigo || !wallet) {
+        document.getElementById("mensaje").innerText =
+          "Debes ingresar
